Fix hero button spacing and clients wraping

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -62,6 +62,10 @@ h2 {
   padding: 0;
 }
 
+.hero .button {
+  margin: 6pt 2pt;
+}
+
 .hero-overlay {
   position: absolute;
   height: 100%;
@@ -154,7 +158,7 @@ h2 {
   display: flex;
 }
 
-flex-wrap--wrap {
+.flex-wrap--wrap {
   flex-wrap: wrap;
 }
 
